--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
+  "main": "src/electron/main.js",
   "name": "card-system",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "vite --host 192.168.31.76",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron:dev": "concurrently vite \"electron .\""
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.2",
+    "element-plus": "^2.4.3",
     "vditor": "^3.9.6",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
+    "concurrently": "^8.2.2",
+    "electron": "^28.0.0",
     "vite": "^4.4.11"
   }
 }
