--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "name": "Yuanda",
     "email": "xiaoyuanda@alliyun.com"
   },
+  "description": "a cardSystem study System",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,21 +13,29 @@
     "build": "vite build",
     "preview": "vite preview",
     "electron:dev": "concurrently vite \"electron .\"",
-    "electron:build": "vite build && electron-builder",
-    "start": "vite | electron ."
+    "electron:build": "vite build && electron-forge make",
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.2",
+    "electron-squirrel-startup": "^1.0.0",
     "element-plus": "^2.4.3",
     "vditor": "^3.9.6",
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^7.2.0",
+    "@electron-forge/maker-deb": "^7.2.0",
+    "@electron-forge/maker-rpm": "^7.2.0",
+    "@electron-forge/maker-squirrel": "^7.2.0",
+    "@electron-forge/maker-zip": "^7.2.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
     "@vitejs/plugin-vue": "^4.4.0",
     "concurrently": "^8.2.2",
     "electron": "^28.0.0",
-    "electron-builder": "^24.9.1",
     "vite": "^4.4.11",
     "vite-plugin-electron": "^0.15.4"
   }
