--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "d3": "^7.8.5",
     "electron-squirrel-startup": "^1.0.0",
     "element-plus": "^2.4.3",
+    "moment": "^2.29.4",
     "vditor": "^3.9.6",
     "vue": "^3.3.4"
   },
